--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -7,7 +7,7 @@
              content="default-src *; 
                       style-src * 'self' 'unsafe-inline' 'unsafe-eval'; 
                       script-src * 'self' 'unsafe-inline' 'unsafe-eval';">
-    <title>Astro.fr</title>
+    <title>Astroman.fr</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script src="js/jquery.min.js"></script>
 </head>
